--- a/static/index.html
+++ b/static/index.html
@@ -3,28 +3,31 @@
 <body>
 <h1>DDownload Downloader</h1>
 <form id="form">
-  <input type="url" id="url" placeholder="Download-Link" required>
-  <input type="text" id="pw" placeholder="Passwort (optional)">
-  <input type="text" id="pkg" placeholder="Paketname (optional)">
-  <button type="submit">Download starten</button>
+  <textarea id="links" placeholder="One URL per line..." rows="6" style="width:100%"></textarea><br>
+  <input type="text" id="pw" placeholder="Password (optional)">
+  <input type="text" id="pkg" placeholder="Package name (optional)">
+  <button type="submit">Start Downloads</button>
 </form>
 <pre id="log"></pre>
 <script>
 const ws = new WebSocket("ws://" + location.host + "/ws");
 ws.onmessage = e => document.getElementById("log").textContent = JSON.stringify(JSON.parse(e.data), null, 2);
+
 document.getElementById("form").onsubmit = async e => {
   e.preventDefault();
-  const res = await fetch("/api/add", {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({
-      url: document.getElementById("url").value,
-      password: document.getElementById("pw").value,
-      package: document.getElementById("pkg").value
-    })
-  });
-  const json = await res.json();
-  alert("Download gestartet: " + json.filename);
+  const lines = document.getElementById("links").value.split(/\\r?\\n/).map(l => l.trim()).filter(Boolean);
+  const password = document.getElementById("pw").value;
+  const pkg = document.getElementById("pkg").value;
+
+  for (const url of lines) {
+    const res = await fetch("/api/add", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ url, password, package: pkg })
+    });
+    const json = await res.json();
+    console.log("Started:", json.filename || json.msg);
+  }
 };
 </script>
 </body></html>
